# SHS-Life-Science-Philosophy-Altruism

./: .gitignore  Grid Simulation.py  custom_env.ipynb  first_env.py  multi_agents_tests.ipynb
Grid Simulation/Testing/: hex_simulation.py
Grid Simulation/cpp_env_project/: CMakeLists.txt
Grid Simulation/cpp_env_project/bindings/: pybind_wrapper.cpp
Grid Simulation/cpp_env_project/env/include/: hex_simulation.hpp
Grid Simulation/cpp_env_project/env/src/: hex_simulation.cpp
Grid Simulation/cuda_env_project/: Agent.ipynb  Environment Testing.ipynb  Grid Simulation.py  action_analysis.ipynb  crop_env.py  cuda_square_simulation.py  cuda_square_simulation.py.lprof  pixi.toml  policy_net.pth  ppo.ipynb  test.ipynb
Grid Simulation/cuda_env_project/gymnasium_env/: pyproject.toml  setup.py
Grid Simulation/cuda_env_project/gymnasium_env/gymnasium_env/: __init__.py
Grid Simulation/cuda_env_project/gymnasium_env/gymnasium_env/envs/: __init__.py  gym_adapter.py
MinigridMiniworldTransfer/: PlotLearingCurve.ipynb
RL Adapted/: environment.py
RL Adapted/.ipynb_checkpoints/: plot-checkpoint.py
rl-starter-files/scripts/: train.py
